[package]
name = "libp2p_file_sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.12", features = ["attributes"] }
clap = { version = "4.3", features = ["derive"] }
either = "1.9"
env_logger = "0.10"
futures = "0.3.28"
libp2p = { version = "0.52", features = [
    "async-std",
    "cbor",
    "dns",
    "kad",
    "noise",
    "macros",
    "request-response",
    "tcp",
    "websocket",
    "yamux",
] }
void = "1.0.2"
